add sample project